styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap');

body {
    margin: 0;
    -webkit-box-sizing: border-box;
            box-sizing: border-box;
    overflow-x: hidden;
    background-color: #fff;
    font-family: 'Poppins', sans-serif !important;
  }
  
body *:focus {
    outline: 0 !important;
}

/* ------------------------------------- Utility Classes ------------------------------------- */
::-webkit-scrollbar{
    width: 10px !important;
}
::-webkit-scrollbar-track{
    box-shadow: inset 0 0 5px rgba(0,0,0,0.3) !important;
    border-radius: 10px !important;
}
::-webkit-scrollbar-thumb{
    background: black !important;
    border-radius: 10px !important;
}
.green-bg{
    background: #47D19A !important;
}
.yellow-bg{
    background: #FFD85C !important;
}
.pink-bg{
    background: #FF5C77 !important;
}
.blue-bg{
    background: #5956E9 !important;
}
.dark-blue-text{
    color: #092340;
}
.normal-heading{
    font-size: 45px !important;
    font-weight: 900 !important;
}
.blue-text{
    color: #5956E9 !important;
}
.pink-text{
    color: #FF5C77 !important;
}
.yellow-text{
    color: #FFD85C !important;
}
.green-text{
    color: #47D19A !important;
}

/* ------------------------------------- Preloader ------------------------------------- */
#preloader {
    position:fixed;
    bottom: 0;
    top:0;
    left: 0;
    right: 0;
    z-index: 10000;
    background: #fff;
}
#status {
    width: 137px;
    height: 81px;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    background-image: url('../images/loading.gif');
    background-repeat: no-repeat;
    background-position: center;
}

.fixed-arrow{
    position: fixed;
    top: 87%;    
    left: 93%;
    border-radius: 50% !important;
    background: #5956E9 !important;
    padding: 10px 15px;
}
/* ------------------------------------- Header ------------------------------------- */
#main-header{
    background: url('../images/header-bg.png') no-repeat center center/cover;
    background-attachment: fixed;
    height: 100vh !important;
}
.line-height-heading{
    line-height: 4.5rem !important;
}
.main-heading-paragraph{
    font-size: 1.2rem;
}
.tagline{
    font-size: 65px !important;
    font-weight: 900 !important;
}
.centered-block{
    padding: 8vh 0vh;
}

/* ------------------------------------- Why us ------------------------------------- */
.about{
    background: url('../images/why-us-bg.png') no-repeat center center/cover;
    padding: 8rem 0rem !important;
}

/* ------------------------------------- Info ------------------------------------- */
.info{
    background: url('../images/info-bg.png') no-repeat center center/cover;
    background-attachment: fixed;
    padding: 8rem 0rem !important;
}

/* ------------------------------------- Testimonial ------------------------------------- */
#testimonial{
    padding: 7rem 0rem !important;
}
.carousel-indicators li{
    display: inline-block;
    width: 10px !important;
    height: 10px !important;
    cursor: pointer;
    margin: 10px;
    text-indent: 0;
    border-radius: 50%;
    background-color: #ffd95c83 !important;
}
.carousel-indicators .active{
    width: 10px;
    height: 10px;
    border-radius: 50%;
    background-color: #FFD85C !important;
}
.blog-carousel-background{
    background: #47d19a;
    border-radius: 100px 100px 0px 100px;
    padding: 30px 40px !important;
}
.blog-image{
    border-radius: 30px 30px 30px 0px;
    height: 110px !important;
}


#blogs{
    background: url('../images/blogs-bg.png') no-repeat center center/cover;
    padding: 8rem 0rem !important;
}

/* ------------------------------------- Aims ------------------------------------- */
#aims{
    background: url('../images/aims-bg.png') no-repeat center center/cover;
    background-attachment: fixed;
    padding: 8rem 0rem !important;
    height: 100vh;
}

/* ------------------------------------- Projects ------------------------------------- */
#projects{
    background: url('../images/blogs-bg.png') no-repeat center center/cover;
    padding: 8rem 0rem !important;
    height: 100vh;
}

/* ------------------------------------- Contact ------------------------------------- */
#contact{
    background: url('../images/contact-bg.png') no-repeat center center/cover;
    padding: 8rem 0rem !important;
    height: 100vh;
}
input{
    background: #B5EDD7 !important;
}

/* Media Queries */
@media screen and (max-width: 480px){
    .fixed-arrow{
        position: fixed;
        top: 87%;    
        left: 80%;
        border-radius: 50% !important;
        background: #5956E9 !important;
        padding: 10px 15px;
    }
    .normal-heading{
        font-size: 40px !important;
        font-weight: 400 !important;
    }
    .line-height-heading{
        line-height: 3.5rem !important;
    }    
    .tagline{
        font-size: 50px !important;
        font-weight: 900 !important;
    }
    #main-header{
        background: url('../images/main-header-mobile-bg.png') no-repeat center center/cover;
        height: 100vh !important;
    }    
    .about{
        background: url('../images/why-us-mobile-bg.png') no-repeat center center/cover;        
        height: auto;
    }
    .info{
        background: url('../images/info-mobile-bg.png') no-repeat center center/contain;
    }
    #aims{
        background: url('../images/aims-mobile-bg.png') no-repeat center center/cover;
        height: auto;
    }  
    #testimonial{
        background: url('../images/testimonials-mobile-bg.png') no-repeat center center/cover;
    }  
    #contact{
        background: url('../images/contact-us-mobile-bg.png') no-repeat center center/contain;        
    }
}

@media screen and (min-width: 480px) and (max-width: 768px){
    .fixed-arrow{
        position: fixed;
        top: 90%;    
        left: 87%;
        border-radius: 50% !important;
        background: #5956E9 !important;
        padding: 10px 15px;
    }
}

